--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,8 @@
 .Sidebar {
-    width: 250px;
+    width: 350px;
     height: 100%;
     background-color: #f0f0f0;
+    border-radius: 5px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -9,11 +10,4 @@
 .Sidebar ul {
     list-style: none;
     padding: 0;
-}
-
-.Sidebar li {
-    text-decoration: none;
-    color: #333;
-    display: block;
-    margin-bottom: 10px;
 }
