--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,4 @@
-.Button {
+.button {
     padding: 10px 15px;
     background-color: #ffffff;
     border: 1px solid #3a008b;
@@ -7,7 +7,7 @@
     font-size: small;
 }
 
-.Button:hover {
+.button:hover {
     padding: 12px 30px;
     cursor: pointer;
     font-size: medium;
