--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,4 +1,4 @@
-.DatePicker {
+.datePicker {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -10,7 +10,7 @@
     display: inline;
 }
 
-.DatePicker:hover {
+.datePicker:hover {
 
 }
 
