--- a/src/components/Number/Number.css
+++ b/src/components/Number/Number.css
@@ -1,3 +1,10 @@
 .number {
-    
+    font-family: Arial, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    box-shadow: 8px 0 0 black;
+    text-shadow: -1px -1px 0 #000,  
+                  1px -1px 0 #000,
+                 -1px 1px 0 #000,
+                  1px 1px 0 #000;
 }
