--- a/src/components/Number/Number.css
+++ b/src/components/Number/Number.css
@@ -1,10 +1,12 @@
 .number {
-    font-family: Arial, sans-serif;
+    font-family: Segoe UI;
     font-size: 50px;
     font-weight: bold;
-    box-shadow: 8px 0 0 black;
-    text-shadow: -1px -1px 0 #000,  
-                  1px -1px 0 #000,
-                 -1px 1px 0 #000,
-                  1px 1px 0 #000;
+    animation: pulse 1s infinite alternate;
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% { transform: scale(1); }
 }
