--- a/src/components/Number/Number.css
+++ b/src/components/Number/Number.css
@@ -3,6 +3,7 @@
     font-size: 50px;
     font-weight: bold;
     animation: pulse 1s infinite alternate;
+    text-align: center;
 }
 
 @keyframes pulse {
