--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
-    width: 350px;
+    width: 50px;
     height: 100%;
-    background-color: #f0f0f0;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
