--- a/src/components/SidebarItem/SidebarItem.css
+++ b/src/components/SidebarItem/SidebarItem.css
@@ -1,6 +1,16 @@
 .sidebarItem {
     text-decoration: none;
-    color: #333;
     display: block;
-    margin-bottom: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    width: 50px;
+    height: 50px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
 }
+
+.sidebarItem:hover {
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+}
+    
