--- a/src/components/StatWidget/StatWidget.css
+++ b/src/components/StatWidget/StatWidget.css
@@ -1,7 +1,4 @@
 .statWidget {
-    text-align: center;
-}
-
-.statWidget h3 {
-    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
