--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,13 +1,15 @@
 .profile {
-    flex-direction: column;
-    display: block;
+    display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-h5 {
     opacity: 0.8;
     letter-spacing: 4px;
     text-align: center;
+    margin: 10px 20px;
 }
 
 .profile-img {
