--- a/src/components/SidebarItem/SidebarItem.css
+++ b/src/components/SidebarItem/SidebarItem.css
@@ -1,16 +1,18 @@
 .sidebarItem {
     text-decoration: none;
-    display: block;
+    display: flex;
     margin-top: 40px;
     margin-bottom: 40px;
-    background-color: rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     width: 50px;
     height: 50px;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    align-items: center;
 }
 
 .sidebarItem:hover {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
     
