--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,9 +1,11 @@
 .sidebar {
     width: 50px;
+    max-width: calc(100% - 40px);
     height: 100vh;
     overflow-y: auto;
     border-radius: 5px;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 .sidebar ul {
