--- a/src/components/Number/Number.css
+++ b/src/components/Number/Number.css
@@ -1,12 +1,17 @@
 .number {
     font-family: Segoe UI;
-    font-size: 50px;
+    font-size: xx-large;
     font-weight: bold;
-    animation: pulse 1s infinite alternate;
+    animation: count 1s ease-out;
 }
 
-@keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.1); }
-    100% { transform: scale(1); }
+@keyframes count {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
 }
