--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,9 +1,10 @@
 .sidebar {
-    width: 50px;
+    width: 130px;
     max-width: calc(100% - 40px);
     height: 100vh;
     overflow-y: auto;
-    border-radius: 5px;
+    border-bottom-right-radius:10px;
+    border-top-right-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
 }
