--- a/src/components/Widget/Widget.css
+++ b/src/components/Widget/Widget.css
@@ -1,9 +1,12 @@
 .widget {
     padding: 10px;
-    width: 100%;
+    width: calc(50% - 20px);
+    min-width: 200px;
+    min-height: 200px;
+    grid-column: span 1 / span 2;
+    grid-row: auto / span 2;
 }
 
 .widget h3 {
-    padding-left: 40px;
-    font-size: 2.5em;
+    font-size: 1.5em;
 }
