--- a/packages/custom-components/src/components/CountdownTimer/CountdownTimer.css
+++ b/packages/custom-components/src/components/CountdownTimer/CountdownTimer.css
@@ -1,9 +1,6 @@
 .countdown-timer {
+    font-family: Arial, sans-serif;
     font-size: 24px;
-    margin-top: 20px;
-    text-align: center;
-}
-
-.countdown-timer span {
-    margin-right: 10px;
+    display: flex;
+    gap: 5px;
 }
