--- a/packages/custom-components/src/components/Timeline/Timeline.css
+++ b/packages/custom-components/src/components/Timeline/Timeline.css
@@ -7,6 +7,7 @@
 
 .timeline.vertical {
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .timeline.horizontal {
@@ -46,13 +47,13 @@
 
 .timeline.vertical .timeline-event {
     width: 80%;
-    align-self: flex-start;
     margin-left: calc(50% - 40%);
+    text-align: left;
 }
 
 .timeline.horizontal .timeline-event {
-    min-width: 100px;
-    margin-top: calc(50% - 20px);
+    min-width: 50px;
+    text-align: center;
 }
 
 .timeline-event:before {
@@ -67,6 +68,7 @@
     height: 20px;
     top: 50%;
     left: -20px;
+    transform: translateY(-50%);
 }
 
 .timeline.horizontal .timeline-event:before {
@@ -74,4 +76,5 @@
     width: 20px;
     top: -20px;
     left: 50%;
+    transform: translateX(-50%);
 }
