--- a/packages/custom-components/src/components/Table/Table.css
+++ b/packages/custom-components/src/components/Table/Table.css
@@ -1,5 +1,14 @@
-.table { 
-    border-collapse: collapse;
+.table {
     width: 100%;
-    border: 2px solid rgb(0, 0, 0, 0.1);
+    border-collapse: collapse;
+}
+
+.table th, .table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.table th {
+    background-color: #f4f4f4;
 }
