--- a/packages/custom-components/src/components/Timeline/Timeline.css
+++ b/packages/custom-components/src/components/Timeline/Timeline.css
@@ -1,82 +1,88 @@
 .timeline {
     position: relative;
     padding: 20px;
-  }
+}
   
-  .timeline.horizontal {
+.timeline.horizontal {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-  }
+    align-items: center; 
+}
   
-  .timeline.vertical {
+.timeline.vertical {
     display: flex;
     flex-direction: column;
-  }
+}
   
-  .timeline-event {
+.timeline-event {
     position: relative;
     display: flex;
     align-items: center;
-    margin: 20px 0; /* Margin for vertical spacing */
-  }
+    margin: 20px 0; 
+}
   
-  .event-marker {
+.event-marker {
     background-color: #007bff;
     width: 12px;
     height: 12px;
     border-radius: 50%;
     position: absolute;
-    left: calc(50% - 6px); /* Centering for vertical */
-    z-index: 1;
-  }
+    left: calc(50% - 6px);
+    z-index: 1; 
+}
   
-  .event-content {
+  
+.event-content {
     padding: 10px;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 8px;
-    margin-left: 10px; /* For horizontal */
-    margin-top: 10px; /* For vertical */
-    min-width: 150px; /* Ensuring a minimum width */
-  }
+    margin-left: 20px; 
+    min-width: 150px; 
+}
   
-  .event-date {
+  
+.event-date {
     font-weight: bold;
     color: #007bff;
     margin-bottom: 5px;
-  }
+}
   
-  .event-description {
+  
+.event-description {
     color: #666;
     font-size: 14px;
-  }
+}
   
-  .timeline.horizontal::before,
-  .timeline.vertical::before {
+  
+.timeline.horizontal::before,
+.timeline.vertical::before {
     content: '';
     position: absolute;
     background: #007bff;
-  }
+}
   
-  .timeline.horizontal::before {
+  
+.timeline.horizontal::before {
     height: 2px;
     left: 0;
     right: 0;
-    top: 50%;
-  }
+    top: 50%; 
+}
   
-  .timeline.vertical::before {
+  
+.timeline.vertical::before {
     width: 2px;
-    left: 50%;
+    left: 50%; 
     top: 0;
     bottom: 0;
-  }
+}
   
-  @media (max-width: 768px) {
+  
+@media (max-width: 768px) {
     .timeline.horizontal {
       flex-direction: column;
-      align-items: center;
+      align-items: center; 
     }
   
     .timeline.horizontal::before {
@@ -84,7 +90,7 @@
       bottom: 0;
       left: 50%;
       width: 2px;
-      height: 100%;
+      height: 100%; 
     }
   
     .timeline-event {
@@ -92,7 +98,7 @@
     }
   
     .timeline .event-marker {
-      left: calc(50% - 6px);
-      margin-right: 20px;
+      left: calc(50% - 6px); 
+      margin-right: 20px; 
     }
-  }
+}
