--- a/packages/custom-components/src/components/Timeline/Timeline.css
+++ b/packages/custom-components/src/components/Timeline/Timeline.css
@@ -27,16 +27,12 @@
     height: 12px;
     border-radius: 50%;
     position: absolute;
-    left: calc(50% - 6px);
+    left: -4px;
     z-index: 1; 
 }
   
   
 .event-content {
-    padding: 10px;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
     margin-left: 20px; 
     min-width: 150px; 
 }
@@ -72,8 +68,7 @@
   
   
 .timeline.vertical::before {
-    width: 2px;
-    left: 50%; 
+    width: 2px; 
     top: 0;
     bottom: 0;
 }
